added the tests